[package]
name = "cryptovec"
description = "A vector which zeroes its memory on clears and reallocations."
version = "0.4.5"
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
repository = "https://pijul.org/cryptovec"
documentation = "https://pijul.org/cryptovec/doc/cryptovec"
license = "Apache-2.0"
include = ["Cargo.toml", "src/lib.rs"]

[dependencies]
libc = "0.2"
winapi = "0.2"
kernel32-sys = "0.2"
